# tauri-plugins

./: README.md
tauri-plugin-applekit/: .gitignore  Cargo.toml  README.md  build.rs  package.json  tsconfig.json
tauri-plugin-applekit/applekit-api/: index.ts
tauri-plugin-applekit/examples/tauri-app/: index.html
tauri-plugin-applekit/examples/tauri-app/src/: App.css  App.tsx
tauri-plugin-applekit/examples/tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-plugin-applekit/examples/tauri-app/src-tauri/capabilities/: default.json
tauri-plugin-applekit/examples/tauri-app/src-tauri/src/: lib.rs  main.rs
tauri-plugin-applekit/examples/tauri-app/src/lib/: Model.ts  TauriUtil.tsx  utils.tsx
tauri-plugin-applekit/native_applekit/: Package.swift
tauri-plugin-applekit/native_applekit/Sources/CLibAppleKitBridge/: KeychainUtil.swift  UserDefaultUtil.swift  bridge.h
tauri-plugin-applekit/permissions/: default.toml
tauri-plugin-applekit/src/: bridge.rs  commands.rs  desktop.rs  lib.rs  mobile.rs
tauri-plugin-bluetooth/: Cargo.toml  build.rs  package.json  tsconfig.json
tauri-plugin-bluetooth/bluetooth-api/: index.ts
tauri-plugin-bluetooth/examples/tauri-app/: package.json  vite.config.ts
tauri-plugin-bluetooth/examples/tauri-app/src/: App.tsx
tauri-plugin-bluetooth/examples/tauri-app/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
tauri-plugin-bluetooth/examples/tauri-app/src-tauri/capabilities/: default.json
tauri-plugin-bluetooth/guest-js/: index.ts
tauri-plugin-bluetooth/native_bluetooth/: Package.swift
tauri-plugin-bluetooth/native_bluetooth/Sources/CLibBluKitBridge/: AppleDeviceName.swift  Bluetooth.swift  Bridge.swift  DeviceInfo.swift  Exposure.swift  bridge.h
tauri-plugin-bluetooth/permissions/: default.toml
tauri-plugin-bluetooth/src/: bridge.rs  commands.rs  desktop.rs  lib.rs  mobile.rs  models.rs
tauri-plugin-storekit2/: Cargo.toml  README.md  build.rs  package.json  tsconfig.json
tauri-plugin-storekit2/examples/tauri-app/: package.json
tauri-plugin-storekit2/examples/tauri-app/src/: App.svelte
tauri-plugin-storekit2/examples/tauri-app/src-tauri/: Cargo.toml
tauri-plugin-storekit2/native_storekit/: Package.swift
tauri-plugin-storekit2/native_storekit/Sources/CLibStoreKitBridge/: InAppPurchase.swift  StoreManager.swift  bridge.h
tauri-plugin-storekit2/permissions/: default.toml
tauri-plugin-storekit2/src/: commands.rs  desktop.rs  lib.rs  mobile.rs  models.rs
tauri-plugin-storekit2/storekit-api/: index.ts
(+6 files in other folders)
