[package]
name = "tauri-plugin-bluetooth"
version = "0.1.0"
authors = [ "You" ]
description = ""
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/bluetooth-api", "/node_modules"]
links = "tauri-plugin-bluetooth"

[dependencies]
tauri = { version = "2.5.0" }
serde = "1.0"
thiserror = "2"
once_cell = "1.21.3"

[build-dependencies]
tauri-plugin = { version = "2.2.0", features = ["build"] }
