[package]
name = "example-app-bluetooth"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "example_app_bluetooth"
crate-type = ["staticlib", "cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.2.0", default-features = false }

[dependencies]
tauri = { version = "2.7.0" , features = ["macos-private-api"]}
tauri-plugin-bluetooth = { path = "../../../" }

